fix remove button too small

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 
 .remove-button {
   margin-left: auto;
-  height: 50%;
+  height: 90%;
   background-color: white;
   font-weight: 700;
   border: 3px solid black;
